--- a/mini_app/index.html
+++ b/mini_app/index.html
@@ -3,27 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+
     <title>My Game Shop</title>
-    <style>
-        body { font-family: sans-serif; background-color: #2c3e50; color: white; text-align: center; padding: 20px; }
-        .product { border: 1px solid #34495e; border-radius: 8px; padding: 10px; margin-bottom: 10px; background-color: #34495e; }
-        button { background-color: #3498db; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
-    </style>
 </head>
 <body>
-    <h1>Welcome to My Game Shop</h1>
-    <div id="user-info"></div>
+    <div class="container">
+        <h1>SAKURA Game Shop</h1>
+        <div id="user-info"></div>
 
-    <div class="product">
-        <h2>Mobile Legends Diamonds 💎</h2>
-        <p>100 ML Diamonds - $5.00</p>
-        <button onclick="buyItem('Mobile Legends')">Buy Now</button>
-    </div>
+        <div class="product-grid">
 
-    <div class="product">
-        <h2>PUBG Mobile UC 🔫</h2>
-        <p>600 PUBG UC - $10.00</p>
-        <button onclick="buyItem('PUBG Mobile')">Buy Now</button>
+            <div class="product-card">
+                <img src="https://placehold.co/300x200/58a6ff/white?text=Mobile+Legends" alt="Mobile Legends">
+                <h2>Mobile Legends</h2>
+                <p>7255 Sold</p>
+                <button class="buy-button" onclick="buyItem('Mobile Legends')">Top Up</button>
+            </div>
+
+            <div class="product-card">
+                <img src="https://placehold.co/300x200/58a6ff/white?text=PUBG+Mobile" alt="PUBG Mobile">
+                <h2>PUBG Mobile</h2>
+                <p>836 Sold</p>
+                <button class="buy-button" onclick="buyItem('PUBG Mobile')">Top Up</button>
+            </div>
+
+            <div class="product-card">
+                <img src="https://placehold.co/300x200/58a6ff/white?text=Genshin" alt="Genshin Impact">
+                <h2>Genshin Impact</h2>
+                <p>124 Sold</p>
+                <button class="buy-button" onclick="buyItem('Genshin Impact')">Top Up</button>
+            </div>
+
+            <div class="product-card">
+                <img src="https://placehold.co/300x200/58a6ff/white?text=HOK" alt="Honor of Kings">
+                <h2>Honor of Kings</h2>
+                <p>7 Sold</p>
+                <button class="buy-button" onclick="buyItem('Honor of Kings')">Top Up</button>
+            </div>
+
+            </div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
